# git-wrapped

./: README.md  pyproject.toml
git_wrapped/: __init__.py  __main__.py  analyzer.py  cli.py  display.py
