[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-wrapped"
version = "1.0.0"
description = "Spotify Wrapped, but for your Git history. Beautiful terminal visualizations of your coding year."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Aliza Ali"}
]
keywords = ["git", "cli", "wrapped", "visualization", "terminal", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
git-wrapped = "git_wrapped.cli:main"

[project.urls]
Homepage = "https://github.com/stackmasteraliza/git-wrapped"
Repository = "https://github.com/stackmasteraliza/git-wrapped"

[tool.setuptools.packages.find]
include = ["git_wrapped*"]
